ver1.6 수정사항 1. 댓글달기 버튼을 누를때 한번에 작동되게 변경 2. 댓글달기 버튼을 누르면 닫기로 텍스트 변경, 다시 누르면 댓글달기로 변경 3. 프로필페이지에서 프로필수정버튼을 눌러서 프로필 수정페이지로 이동하게 수정
추가사항
1. 프로필수정 페이지(액티비티, 레이아웃) 생성
2. 프로필 이미지 디바이스에서 이미지를 가져와서 선택가능(데이터베이스저장 x)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".ProfileFragment.ProfileEditActivity"
+            android:exported="false" />
+        <activity
             android:name=".ViewInfoPlantActivity"
             android:exported="false" />
         <activity
