ver1.96 수정사항 1. 기존 프로필 수정에서 주소를 수동으로 입력하는 것이 아니라 firebase hosting에 올려놓은 웹페이지를 통해 카카오 api를 사용해서 주소를 검색해서 입력함 2. 기존 프로필수정 레이아웃에서 주소를 입력하는 부분이 도로명주소와 구주소를 병기해서 쓰면 너무 길어서 잘려보여서 폰트 크기를 줄이고 자동 줄바꿈을 지원하게 수정함(상세주소부분은 예외)
추가사항
1. firebase hosting의 웹 페이지와 앱의 webView를 연결해서 보여줄 SearchActivity를 새로 작성(레이아웃포함)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,11 +11,15 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
+        android:icon="@drawable/main_logo"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.NEWPTS"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <activity
+            android:name=".ProfileFragment.SearchActivity"
+            android:exported="false" />
         <activity
             android:name=".ProfileFragment.ProfileEditActivity"
             android:exported="false" />
@@ -74,7 +78,6 @@
         <activity
             android:name=".MainActivity"
             android:label="메인 액티비티" />
-
     </application>
 
 </manifest>
